crates/vespertide-query/src/sql/snapshots/vespertide_query__sql__create_table__tests__create_table_with_inline_auto_increment_primary_key@create_table_with_inline_auto_increment_Sqlite.snap
---
source: crates/vespertide-query/src/sql/create_table.rs
expression: sql
---
CREATE TABLE "users" ( "id" integer NOT NULL PRIMARY KEY AUTOINCREMENT )
