crates/vespertide-query/src/sql/snapshots/vespertide_query__sql__create_table__tests__create_table_with_table_level_unique@create_table_with_table_level_unique_MySql.snap
---
source: crates/vespertide-query/src/sql/create_table.rs
expression: sql
---
CREATE TABLE `users` ( `id` int, `email` text, UNIQUE KEY `uq_email` (`email`) )
