crates/vespertide-query/src/sql/snapshots/vespertide_query__sql__create_table__tests__create_table_with_table_level_unique@create_table_with_table_level_unique_Sqlite.snap
---
source: crates/vespertide-query/src/sql/create_table.rs
expression: sql
---
CREATE TABLE "users" ( "id" integer, "email" text )
CREATE UNIQUE INDEX "uq_users__uq_email" ON "users" ("email")
