crates/vespertide-query/src/sql/snapshots/vespertide_query__sql__create_table__tests__create_table_with_timestamp_now_default@create_table_with_timestamp_now_default_MySql.snap
---
source: crates/vespertide-query/src/sql/create_table.rs
assertion_line: 734
expression: sql
---
CREATE TABLE `events` ( `id` bigint NOT NULL, `created_at` timestamp NOT NULL DEFAULT (CURRENT_TIMESTAMP) )
